--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "@react-three/cannon": "^5.0.0",
     "@react-three/drei": "^8.18.6",
-    "@react-three/fiber": "^7.0.26",
+    "@react-three/fiber": "^7.0.18",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -57,4 +58,3 @@
     ]
   }
 }
-
